--- a/index.css
+++ b/index.css
@@ -1,12 +1,46 @@
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  font-family: "Open Sans", sans-serif;
+  padding: 0;
   margin: 0;
-  font-family: Arial, sans-serif;
-  background-color: #14284b;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
-h1 {
-  color: #ffffff;
+
+body > :not(header) {
+  margin: 0 9.38rem;
+}
+
+header {
+  background-color: #14284b;
+  padding: 1.25rem;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+header h1 {
+  color: white;
+  font-family: "Open Sans", sans-serif;
+  font-size: 2.25rem; /* 36px to rem */
+  font-weight: bold;
+  margin: 0;
+}
+
+.button {
+  background-color: #bf0a30;
+  color: white;
+  font-size: 0.75rem;
+  border: none;
+  padding: 0.625rem 1.25rem; /* 10px 20px to rem */
+  cursor: pointer;
+  text-align: center;
+  display: inline-block;
+  text-decoration: none;
+  border-radius: 0.5rem;
+  width: fit-content;
+}
+
+.icons {
+  flex-direction: row;
+  justify-content: space-evenly;
 }
