--- a/index.css
+++ b/index.css
@@ -1,21 +1,31 @@
 body {
   font-family: "Open Sans", sans-serif;
   padding: 0;
-  margin: 0;
+  margin: 0rem 0rem 6rem 0rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
 
 body > :not(header) {
-  margin: 0 9.38rem;
+  margin: 0 auto;
+  max-width: 900px;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: #14284b;
   padding: 1.25rem;
   text-align: center;
   margin-bottom: 2rem;
+  gap: 2rem;
+  img {
+    width: 10%;
+  }
 }
 
 header h1 {
@@ -38,9 +48,12 @@ header h1 {
   text-decoration: none;
   border-radius: 0.5rem;
   width: fit-content;
+  font-weight: bold;
+  font-size: large;
 }
 
 .icons {
   flex-direction: row;
   justify-content: space-evenly;
+  gap: 1rem;
 }
