--- a/index.css
+++ b/index.css
@@ -18,22 +18,45 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #14284b;
-  padding: 1.25rem;
   text-align: center;
-  margin-bottom: 2rem;
   gap: 2rem;
-  img {
-    width: 10%;
-  }
 }
 
-header h1 {
+.header-hero-image {
+  top: 0;
+  left: 0;
+  position: absolute;
+  object-fit: cover;
+  object-position: bottom;
+  width: 100%;
+  height: 35%;
+}
+
+.logo {
+  width: 10%;
+  position: absolute;
+  top: 4%;
+  left: 3%;
+  z-index: 2;
+}
+
+.header-title {
+  position: absolute;
+  top: 0;
+  left: 0;
   color: white;
   font-family: "Open Sans", sans-serif;
   font-size: 2.25rem; /* 36px to rem */
   font-weight: bold;
-  margin: 0;
+  margin-left: 30%;
+  z-index: 2;
+}
+
+.header-border {
+  position: relative;
+  z-index: 2;
+  width: auto;
+  filter: drop-shadow(0px 9px 5px rgba(0, 0, 0, 0.25));
 }
 
 .button {
